--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="update-issue">
         <div class="intro"><h1>Issue Tracker</h1></div>
         <div class="issues">
-          <div id="issue-1"><small>opened issues: 0</small></div>
-          <div id="issue-2"><small>closed issues: 0</small></div>
-          <div id="issue-3"><small>total issues: 0</small></div>
+          <div id="issue-1"><small>Opened issues: 0</small></div>
+          <div id="issue-2"><small>Closed issues: 0</small></div>
+          <div id="issue-3"><small>Total issues: 0</small></div>
         </div>
       </div>
       <div class="jumbotron">
